@startuml
' Contract Structure Diagram for SupplyChainTracker
skinparam classAttributeIconSize 0

package "SupplyChainTracker Contract" {
    
    class "SupplyChainTracker" as Contract {
        + FABRICANTE_ROLE: bytes32
        + AUDITOR_HW_ROLE: bytes32
        + TECNICO_SW_ROLE: bytes32
        + ESCUELA_ROLE: bytes32
        + DEFAULT_ADMIN_ROLE: bytes32
        --
        + constructor()
        + registerNetbooks()
        + auditHardware()
        + validateSoftware()
        + assignToStudent()
        + getNetbookState()
        + getNetbookReport()
        + getTokenMetadata()
        + getTokenId()
        + getSerialNumber()
    }
    
    class "Netbook" as Struct {
        + serialNumber: string
        + batchId: string
        + initialModelSpecs: string
        + hwAuditor: address
        + hwIntegrityPassed: bool
        + hwReportHash: bytes32
        + swTechnician: address
        + osVersion: string
        + swValidationPassed: bool
        + destinationSchoolHash: bytes32
        + studentIdHash: bytes32
        + distributionTimestamp: uint
        + currentState: State
        + exists: bool
        + tokenId: uint256
    }
    
    enum "State" as Enum {
        FABRICADA
        HW_APROBADO
        SW_VALIDADO
        DISTRIBUIDA
    }
    
    Contract "1" *-- "*" Struct : contains >
    Struct "1" -- "1" Enum : currentState >
    
    note right of Contract
        Implements AccessControl and AccessControlEnumerable
        Uses a state machine pattern for netbook lifecycle
        Each netbook is tokenized with a unique tokenId
        All PII data is stored as hashes for privacy
        Full traceability through event logging
    end note
    
}
@enduml